--- a/package.json
+++ b/package.json
@@ -11,15 +11,17 @@
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
+    "autoprefixer": "^10.2.6",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
     "minimist": "^1.2.5",
     "node-sass": "^6.0.0",
+    "postcss": "^8.3.0",
     "webpack": "^5.38.1",
     "webpack-stream": "^6.1.2"
   },
