--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
     "del": "^6.0.0",
+    "fibers": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
     "minimist": "^1.2.5",
-    "node-sass": "^6.0.0",
     "postcss": "^8.3.0",
+    "sass": "^1.34.1",
     "webpack": "^5.38.1",
     "webpack-stream": "^6.1.2"
   },
