--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       - name: checkout master
         uses: actions/checkout@v2
         with:
-          ref: dev
+          ref: master
 
       - name: Create new Branch
         env:
