--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,36 @@ jobs:
         with:
           ref: master
 
+      - name: create git ignore
+        uses: actions/checkout@v2
+        run: |
+          rm -rf .git
+          rm -r .gitignore
+
+          echo ".bowerrc
+          .editorconfig
+          .travis.yml
+          .gitignore
+          .babelrc
+          ./images
+          webpack.config.js
+          bin
+          gulpfile.js
+          .prettierignore
+          config.js
+          node_modules
+          content
+          package.json
+          svgpack
+          tmp
+          src
+          config.toml
+          yarn.lock
+          renovate.json
+          !/exampleSite/config.toml
+          !/exampleSite/content
+          !/exampleSite/static" > .gitignore
+
       - name: Create new Branch
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
