--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,28 +18,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
-          git checkout -b release
-          echo ".bowerrc
-          .editorconfig
-          .travis.yml
-          .gitignore
-          .babelrc
-          ./images
-          webpack.config.js
-          bin
-          gulpfile.js
-          .prettierignore
-          config.js
-          node_modules
-          content
-          package.json
-          svgpack
-          tmp
-          src
-          config.toml
-          yarn.lock
-          renovate.json
-          !/exampleSite/config.toml
-          !/exampleSite/content
-          !/exampleSite/static" > .gitignore
-          git push origin release
+          git add .
+          git commit -m "${REF} is pushed"
+          git push
