--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,17 +14,10 @@ jobs:
         with:
           ref: master
 
-      - name: Config
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-
-      - name: Pusher
-        run: |
-          git add .
-          git commit --quiet -m "github actions is pushed"
+      - name: Create new Branch
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-
-      - name: Push
-        run: git push master:release
+        run: |
+          git checkout -b release
+          echo ".bowerrc" > .gitignore
+          git push origin release
