--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,17 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           git checkout -b release
-          echo ".bowerrc" > .gitignore
-          git push origin release
+          git config --global user.email "ci@example.com"
+          git config --global user.name "CI Action"
+          if [[ ! -f .gitignore ]]; then
+            # Make sure .gitignore exists
+            touch .gitignore
+          fi
+          if ! grep -q .ci-tools .gitignore; then
+            # Add .ci-tools to .gitignore
+            echo .ci-tools >> .gitignore
+          fi
+
+          git add -A
+          git commit -m "Deploy from Github Actions"
+          git push --force origin release
