--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
-          git checkout -b release
           git config --global user.email "ci@example.com"
           git config --global user.name "CI Action"
           if [[ ! -f .gitignore ]]; then
@@ -53,4 +52,4 @@ jobs:
           fi
           git add .
           git commit -m "Deploy from Github Actions"
-          git push --force origin release
+          git push --force master:release
