--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           git checkout -b release
-          rm -rf .git
           git config --global user.email "ci@example.com"
           git config --global user.name "CI Action"
           if [[ ! -f .gitignore ]]; then
@@ -55,4 +54,4 @@ jobs:
           git init
           git add .
           git commit -m "Deploy from Github Actions"
-          git push --force origin release
+          git push --force origin release2
