--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
           git checkout -b release
+          rm .git
+          git init
           git config --global user.email "ci@example.com"
           git config --global user.name "CI Action"
           if [[ ! -f .gitignore ]]; then
@@ -51,7 +53,7 @@ jobs:
             !/exampleSite/content
             !/exampleSite/static" >> .gitignore
           fi
-          git init
+
           git add .
           git commit -m "Deploy from Github Actions"
           git push --force origin release
