--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,14 +21,14 @@ jobs:
           git init
           git config --global user.email "ci@example.com"
           git config --global user.name "CI Action"
-          git rm --cached -r src 
+          git rm --cached -r * 
           if [[ ! -f .gitignore ]]; then
             # Make sure .gitignore exists
             touch .gitignore
           fi
           if ! grep -q .ci-tools .gitignore; then
             # Add .ci-tools to .gitignore
-            echo "
+            echo "src
             .editorconfig
             .travis.yml
             .gitignore
