--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,42 +18,39 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
         run: |
+          rm -rf .git
           git init
           git config --global user.email "ci@example.com"
           git config --global user.name "CI Action"
-          git rm --cached -r * 
-          git rm --cached -r .*
           if [[ ! -f .gitignore ]]; then
             # Make sure .gitignore exists
             touch .gitignore
           fi
           if ! grep -q .ci-tools .gitignore; then
             # Add .ci-tools to .gitignore
-            echo "src" >> .gitignore
-            echo ".editorconfig" >> .gitignore
-            echo ".travis.yml" >> .gitignore
-            echo ".gitignore" >> .gitignore
-            echo ".babelrc" >> .gitignore
-            echo "./images" >> .gitignore
-            echo "webpack.config.js" >> .gitignore
-            echo "bin" >> .gitignore
-            echo "gulpfile.js" >> .gitignore
-            echo ".prettierignore" >> .gitignore
-            echo "config.js" >> .gitignore
-            echo "node_modules" >> .gitignore
-            echo "content" >> .gitignore
-            echo "package.json" >> .gitignore
-            echo "svgpack" >> .gitignore
-            echo ".prettierignore" >> .gitignore
-            echo "tmp" >> .gitignore
-            echo ".prettierignore" >> .gitignore
-            echo "config.toml" >> .gitignore
-            echo "yarn.lock" >> .gitignore
-            echo "renovate.json" >> .gitignore
-            echo ".prettierrc" >> .gitignore
-            echo "!/exampleSite/config.toml" >> .gitignore
-            echo "!/exampleSite/content" >> .gitignore
-            echo "!/exampleSite/static" >> .gitignore
+            echo "src
+            .editorconfig
+            .travis.yml
+            .gitignore
+            .babelrc
+            ./images
+            webpack.config.js
+            bin
+            gulpfile.js
+            .prettierignore
+            config.js
+            node_modules
+            content
+            package.json
+            svgpack
+            tmp
+            src
+            config.toml
+            yarn.lock
+            renovate.json
+            !/exampleSite/config.toml
+            !/exampleSite/content
+            !/exampleSite/static" >> .gitignore
           fi
           git add .
           git checkout -b release
