--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,4 +54,4 @@ jobs:
           fi
           git add .
           git commit -m "Deploy from Github Actions"
-          git push --force master release
+          git push --force "https://$GITHUB_ACTOR:${{ secrets.ACCESS_TOKEN }}@github.com/$GITHUB_REPOSITORY.git" master:release
