--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,12 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
     steps:
       - name: checkout master
         uses: actions/checkout@v2
+        - uses: actions/setup-node@v2
+          with:
+            node-version: "12.x"
         with:
           ref: master
 
