--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: checkout master
         uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
+        uses: actions/setup-node@v2
           with:
             node-version: "12.x"
         with:
