--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,12 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: master
+
+      - name: npm init
         uses: actions/setup-node@v2
         with:
-          node-version: "12.x"
-        
+          node-version: '12.x'
+
       - name: Create new Branch
         env:
           GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
