--- a/package.json
+++ b/package.json
@@ -2,32 +2,52 @@
   "name": "web_template_gulp",
   "version": "1.0.0",
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
     "dev": "npx gulp dev",
     "prod": "npx gulp dev --env production",
-    "build": "npx gulp build --env production"
+    "build": "npx gulp build --env production",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-  "license": "MIT",
-  "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
-    "autoprefixer": "^10.2.6",
+  "dependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
+    "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
-    "browser-sync": "^2.26.14",
+    "browser-sync": "^2.27.5",
+    "css-loader": "^6.5.1",
+    "cssnano": "^5.0.10",
     "del": "^6.0.0",
     "fibers": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-ejs": "^5.1.0",
+    "gulp-html-beautify": "^1.0.1",
+    "gulp-html-minifier": "^0.1.8",
+    "gulp-imagemin": "^7.0.1",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^9.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.2",
+    "imagemin-svgo": "^8.0.0",
     "minimist": "^1.2.5",
-    "postcss": "^8.3.0",
-    "sass": "^1.34.1",
-    "webpack": "^5.38.1",
-    "webpack-stream": "^6.1.2"
+    "postcss": "^8.3.9",
+    "sass": "^1.42.1",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.58.1",
+    "webpack-stream": "^7.0.0"
   },
-  "dependencies": {
-    "gsap": "^3.7.0",
-    "three": "^0.130.0"
+  "devDependencies": {
+    "@pickra/copy-code-block": "^1.2.0",
+    "@storybook/addon-actions": "^6.3.12",
+    "@storybook/addon-essentials": "^6.3.12",
+    "@storybook/addon-knobs": "^6.3.1",
+    "@storybook/addon-links": "^6.3.12",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/html": "^6.3.12",
+    "@whitespace/storybook-addon-html": "^5.0.0"
   }
 }
