--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prod": "npx gulp dev --env production",
     "build": "npx gulp build --env production",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint:css": "stylelint --fix **/*.scss"
   },
   "dependencies": {
     "@babel/core": "^7.15.8",
@@ -37,6 +38,13 @@
     "postcss": "^8.3.9",
     "sass": "^1.42.1",
     "style-loader": "^3.3.1",
+    "stylelint": "^14.2.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^6.0.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-order": "^5.0.0",
+    "stylelint-prettier": "^2.0.0",
+    "stylelint-scss": "^4.1.0",
     "webpack": "^5.58.1",
     "webpack-stream": "^7.0.0"
   },
