--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^8.0.0",
     "minimist": "^1.2.5",
-    "postcss": "^8.3.9",
+    "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
     "sass": "^1.42.1",
     "style-loader": "^3.3.1",
     "stylelint": "^14.2.0",
